feat(web): initialize Angular web application with SSR support
- Add package.json and project.json for web application configuration.
- Create initial application structure including app component, routing, and services.
- Implement RSVP form with validation and submission handling.
- Add styles and HTML structure for the event page.
- Set up server-side rendering with Angular SSR.
- Include necessary dependencies and configurations for Angular and Express.
- Create a countdown timer for the event date.
- Add confetti animation on the event page.
- Implement error handling and success messages for RSVP submissions.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@birthday-site/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "web:start": "nx run web:serve",
+    "web:build": "nx run web:build",
+    "web:test": "nx run web:test"
+  },
   "private": true,
   "dependencies": {},
   "devDependencies": {
@@ -16,6 +20,7 @@
     "typescript": "~5.9.2"
   },
   "workspaces": [
+    "apps/*",
     "packages/*"
   ]
 }
