--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ concurrency:
   group: deploy-production
   cancel-in-progress: true
 
+env:
+  PROJECT_NAME: birthdaySite
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -34,7 +37,7 @@ jobs:
           dotnet-version: "10.0.x"
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install --frozen-lockfile --production
 
       - name: Nx build web
         run: bun nx run web:build
@@ -42,7 +45,17 @@ jobs:
       - name: Nx build api
         run: bun nx run api:build
 
-      - name: Copy deployment files to server
+      - name: Create deployment package
+        run: |
+          tar --exclude='.git' \
+              --exclude='node_modules' \
+              --exclude='.nx' \
+              --exclude='dist' \
+              --exclude='bin' \
+              --exclude='obj' \
+              -czf deploy.tar.gz .
+
+      - name: Copy files to server
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -50,13 +63,10 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: ${{ secrets.SERVER_PORT || 22 }}
-          source: "."
-          target: ${{ secrets.VPS_DEPLOY_PATH }}
-          overwrite: true
-          rm: true
-          strip_components: 0
+          source: "deploy.tar.gz"
+          target: "~/deployments/${{ env.PROJECT_NAME }}/"
 
-      - name: Deploy to server
+      - name: Extract and deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -64,9 +74,40 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: ${{ secrets.SERVER_PORT || 22 }}
+          script_stop: true
           script: |
             set -e
-            cd ${{ secrets.VPS_DEPLOY_PATH }}
-            docker compose pull || true
-            docker compose up -d --build
-            docker compose ps
+            cd ~/deployments/${{ env.PROJECT_NAME }}
+
+            # Stop existing containers
+            docker compose down || true
+
+            # Extract deployment package
+            tar -xzf deploy.tar.gz
+            rm deploy.tar.gz
+
+            # Build and start containers
+            docker compose build --no-cache
+            docker compose up -d
+
+            # Verify deployment
+            sleep 10
+            if docker compose ps | grep -q "Up"; then
+              echo "Deployment successful!"
+              docker compose ps
+            else
+              echo "Deployment failed!"
+              docker compose logs
+              exit 1
+            fi
+
+            # Clean up old images and containers
+            docker system prune -f
+
+            echo "Deployment completed at $(date)"
+
+      - name: Deployment status
+        if: failure()
+        run: |
+          echo "Deployment failed!"
+          exit 1
