--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,10 @@ jobs:
         run: bun install --frozen-lockfile --production
 
       - name: Nx build web
-        run: bun nx run web:build
+        run: bunx nx run web:build
 
       - name: Nx build api
-        run: bun nx run api:build
+        run: bunx nx run api:build
 
       - name: Create deployment package
         run: |
