--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           dotnet-version: "10.0.x"
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile --production
+        run: bun install --frozen-lockfile
 
       - name: Nx build web
         run: bunx nx run web:build
