--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Create deployment package
         run: |
-          tar --warning=no-file-changed
+          tar --warning=no-file-changed \
               --exclude='deploy.tar.gz' \
               --exclude='.git' \
               --exclude='node_modules' \
