fix: update favicon and api data volume mount
switch the web favicon to the new logo asset and add updated image files
for frontend branding resources.

replace the api named volume with a host bind mount so database data
persists at the expected deployment path.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       ASPNETCORE_ENVIRONMENT: Production
       ConnectionStrings__Default: Data Source=/app/data/invitation.db;
     volumes:
-      - birthday_api_data:/app/data
+      - /home/fanto/deployments/birthdaySite/apps/api/Birthday:/app/data
     ports:
       - "5252:8080"
     networks:
@@ -31,9 +31,6 @@ services:
       - "80:4000"
     networks:
       - birthday_net
-
-volumes:
-  birthday_api_data:
 
 networks:
   birthday_net:
