feat: integrate Azure Key Vault and add CSV attachment to invitation emails
- Add Azure Key Vault configuration for production secret management
- Add CSV attachment generation for confirmed participants in email service
- Switch web package manager from bun to npm

--- a/apps/api/Birthday/appsettings.Development.json
+++ b/apps/api/Birthday/appsettings.Development.json
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=invitation.db;"
+    "Default": "Data Source=invitationTest.db;"
   },
   "EmailSettings": {
     "To": "luciensiani@gmail.com"
