--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -8,7 +8,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "bun --cwd apps/web ng serve"
+        "command": "npm run ng --prefix apps/web serve"
       }
     },
     "build": {
