--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     environment:
       ASPNETCORE_ENVIRONMENT: Production
+      EmailSettings__Password: ${EmailSettings__Password}
       ConnectionStrings__Default: Data Source=/app/data/invitation.db;
     volumes:
       - /home/fanto/deployments/birthdaySite/apps/api/Birthday:/app/data
