fix(api): correct sender email and add recipient

--- a/apps/api/Birthday/appsettings.json
+++ b/apps/api/Birthday/appsettings.json
@@ -31,7 +31,7 @@
   "EmailSettings": {
     "Server": "smtp-relay.brevo.com",
     "Port": 587,
-    "From": "bithday@fanto.dev",
+    "From": "birthday@fanto.dev",
     "To": "CarelleFokou2000@yahoo.com",
     "SenderName": "Birthday App",
     "Username": "carnation.sepia621@fanto.dev"
