fix(config): keep email recipient in production only

--- a/apps/api/Birthday/appsettings.Production.json
+++ b/apps/api/Birthday/appsettings.Production.json
@@ -1,11 +1,6 @@
 {
   "EmailSettings": {
-    "Server": "smtp-relay.brevo.com",
-    "Port": 587,
-    "From": "bithday@fanto.dev",
-    "To": "CarelleFokou2000@yahoo.com",
-    "SenderName": "Birthday App",
-    "Username": "carnation.sepia621@fanto.dev"
+    "To": "CarelleFokou2000@yahoo.com"
   },
   "ConnectionStrings": {
     "Default": "Data Source=invitation.db;"
