fix(api): parse email recipients from config
Remove hardcoded recipient addresses and use the configured `EmailSettings.To`
value as a parsed address list so multiple recipients can be handled safely
across environments.

Also clean up duplicated email overrides in environment settings, ensure the
web form always clears its submitting state on completion, and add small
dev/debug quality-of-life updates.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,13 @@
       "type": "dotnet",
       "request": "launch",
       "projectPath": "${workspaceFolder}/apps/api/Birthday/Birthday.csproj"
+    },
+    {
+      "name": "angular",
+      "type": "chrome",
+      "request": "launch",
+      // "preLaunchTask": "npm: start",
+      "url": "http://localhost:4200/"
     }
   ]
 }
