--- a/apps/api/Birthday/appsettings.json
+++ b/apps/api/Birthday/appsettings.json
@@ -32,8 +32,7 @@
     "Server": "smtp-relay.brevo.com",
     "Port": 587,
     "From": "birthday@fanto.dev",
-    "SenderName": "Birthday App",
-    "Username": "carnation.sepia621@fanto.dev"
+    "SenderName": "Birthday App"
   },
   "AllowedHosts": "*"
 }
