--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       NODE_ENV: production
       PORT: 4000
       API_PROXY_TARGET: http://api:8080
+      ACCESS_CODE: ${ACCESS_CODE}
     depends_on:
       - api
     ports:
