--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "10.0.x"
+          dotnet-version: '10.0.x'
 
       - name: Install dependencies
         run: npm install --no-package-lock
@@ -51,8 +51,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: ${{ secrets.SERVER_PORT || 22 }}
-          source: "deploy.tar.gz"
-          target: "~/deployments/${{ env.PROJECT_NAME }}/"
+          source: 'deploy.tar.gz'
+          target: '~/deployments/${{ env.PROJECT_NAME }}/'
 
       - name: Extract and deploy
         uses: appleboy/ssh-action@v1.0.3
@@ -89,9 +89,6 @@ jobs:
               docker compose logs
               exit 1
             fi
-
-            # Clean up old images and containers
-            docker system prune -f
 
             echo "Deployment completed at $(date)"
 
