--- a/apps/api/Birthday/project.json
+++ b/apps/api/Birthday/project.json
@@ -22,6 +22,12 @@
       "options": {
         "command": "dotnet restore apps/api/Birthday/Birthday.csproj"
       }
+    },
+    "publish": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "dotnet publish apps/api/Birthday/Birthday.csproj -c Release -o apps/api/publish /p:UseAppHost=false"
+      }
     }
   },
   "tags": []
