--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   api:
     build:
       context: .
-      dockerfile: apps/api/Birthday/Dockerfile
+      dockerfile: Dockerfile.api
     container_name: birthday-api
     restart: unless-stopped
     env_file:
@@ -11,8 +11,8 @@ services:
       ASPNETCORE_ENVIRONMENT: Production
       EmailSettings__Password: ${EmailSettings__Password}
       ConnectionStrings__Default: Data Source=/app/data/invitation.db;
-    volumes:
-      - /home/fanto/deployments/birthdaySite/apps/api/Birthday:/app/data
+    # volumes:
+    #   - /home/fanto/deployments/birthdaySite/apps/api/Birthday:/app/data
     ports:
       - "5252:8080"
     networks:
@@ -21,7 +21,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: apps/web/Dockerfile
+      dockerfile: Dockerfile.web
     container_name: birthday-web
     restart: unless-stopped
     environment:
