--- a/apps/web/Dockerfile.web
+++ b/apps/web/Dockerfile.web
@@ -1,10 +1,10 @@
 FROM node:22-alpine
 WORKDIR /app
 
-COPY dist/web ./dist/web
+COPY web ./web
 
 ENV NODE_ENV=production
 ENV PORT=4000
 EXPOSE 4000
 
-CMD ["node", "dist/web/server/server.mjs"]
+CMD ["node", "web/server/server.mjs"]
